# zzsblog

./: .gitignore  make.py  pyproject.toml
.github/workflows/: build-jekyll.yml  sphinx.yml
source/: about.md  conf.py  index.md  index.rst
source/Coding/: TCaptcha的检测机制.md  docker+nextcloud+wordpress.md  exiv2.md  index.rst  python数值中的下划线.md  pytorch定位NaN.md  多个qmake共存.md  记录不可思议.md
source/Products/: index.rst
source/Research/: index.rst
source/_snippets/: news.md
source/_templates/util/: sidebar.html
